<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/black_abstract"
            tools:context=".activity.EditCarDealActivity">

        <!-- Main title -->
        <TextView
                android:id="@+id/text_title_edit_carDeal"
                style="@style/FragmentTitles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/edit_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <!-- carDeal title -->
        <TextView
                android:id="@+id/text_carDeal_edit"
                style="@style/AddTitles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/title_carDeal_hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_title_edit_carDeal"
                android:layout_marginLeft="16dp"/>

        <!-- carDeal input -->
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_carDeal_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:background="#EEFFFFFF"
                app:layout_constraintEnd_toEndOf="@+id/til_amount_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_carDeal_edit"
                android:layout_marginLeft="16dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edit_carDeal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_carDeal_hint"
                    android:inputType="text|textCapSentences"
                    android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Country title -->
        <TextView
                android:id="@+id/text_Country_edit"
                style="@style/AddTitles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/title_country_hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_carDeal_edit"
                android:layout_marginLeft="16dp"/>

        <!-- Country spinner -->
        <Spinner
                android:id="@+id/spinner_Country_edit"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_Country_edit"
                android:layout_marginLeft="16dp"/>

        <!-- Amount title -->
        <TextView
                android:id="@+id/text_amount_edit"
                style="@style/AddTitles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title_amount_hint"
                app:layout_constraintStart_toStartOf="@+id/til_amount_edit"
                app:layout_constraintTop_toBottomOf="@id/til_carDeal_edit" />

        <!-- Amount input -->
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_amount_edit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginTop="16dp"
                android:background="#EEFFFFFF"
                app:layout_constraintStart_toEndOf="@id/spinner_Country_edit"
                app:layout_constraintTop_toBottomOf="@id/text_amount_edit"
                android:layout_marginLeft="42dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edit_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits=".0123456789"
                    android:maxLines="1"
                    android:hint="@string/add_amount_format_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Date title -->
        <TextView
                android:id="@+id/text_date_edit"
                style="@style/AddTitles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/title_date_hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinner_Country_edit"
                android:layout_marginLeft="16dp"/>

        <!-- Date input -->

        <DatePicker
                android:id="@+id/picker_date_edit"
                android:headerBackground="#FFC300"
                android:layout_width="wrap_content"
                android:layout_height="425dp"
                android:datePickerMode="calendar"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:background="#EEFFFFFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_date_edit"
                android:layout_marginLeft="8dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                app:srcCompat="@drawable/ic_save"
                android:tint="#ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="VectorDrawableCompat"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
